# cli-file-explorer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-packages.yml  build.yml  linux-packages.yml
debian/: control  postinst  prerm  rules
include/: FileSystem.h
include/bookmark/: BookMark.h
include/cli/: CommandLineInterface.h
include/fileops/: FileOperations.h
include/search/: Search.h
include/sorting/: Sorting.h
src/: FileSystem.cpp  main.cpp
src/bookmark/: BookMark.cpp
src/cli/: CommandLineInterface.cpp  CommandLineInterface.h  CommandLineInterface_copy.cpp  CommandLineInterface_delete_rename.cpp  CommandLineInterface_interactive.cpp
src/fileops/: FileOperations.cpp
src/search/: Search.cpp
src/sorting/: Sorting.cpp
tests/: BookMarkTest.cpp  FileSystemTest.cpp
